--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -76,7 +76,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/description"
+        android:hint="@string/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actPlantName"
@@ -104,25 +104,28 @@
         app:layout_constraintTop_toBottomOf="@id/editText2">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/btnTakePhoto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/btn_star_big_on" />
+            android:src="@android:drawable/btn_star_big_on"
+            tools:src="@drawable/ic_photo" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/btn_dialog" />
+            android:src="@android:drawable/btn_dialog"
+            tools:src="@drawable/ic_save" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/btn_star" />
+            android:src="@android:drawable/btn_star"
+            tools:src="@drawable/ic_login" />
     </LinearLayout>
 
     <ImageView
