--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -108,24 +108,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/btn_star_big_on"
-            tools:src="@drawable/ic_photo" />
+            android:src="@drawable/ic_photo"
+            android:contentDescription="@string/later" />
 
         <ImageButton
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/btn_dialog"
-            tools:src="@drawable/ic_save" />
+            android:src="@drawable/ic_save"
+            android:contentDescription="@string/later" />
 
         <ImageButton
             android:id="@+id/btnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/btn_star"
-            tools:src="@drawable/ic_login" />
+            android:src="@drawable/ic_login"
+            android:contentDescription="@string/later" />
     </LinearLayout>
 
     <ImageView
@@ -138,12 +138,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:src="@android:mipmap/sym_def_app_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:srcCompat="@drawable/art1" />
+        app:srcCompat="@drawable/art1"
+        android:contentDescription="@string/later" />
 
+<!--    android:src="@android:mipmap/sym_def_app_icon"-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
