--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -129,7 +129,7 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgPlant"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
