Save speciment to FireStore.

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toBottomOf="@+id/lbllongitude" />
 
     <AutoCompleteTextView
-        android:id="@+id/actPlantName"
+        android:id="@+id/actvPlantName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/plantName"
@@ -80,7 +80,7 @@
         android:hint="@string/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/actPlantName"
+        app:layout_constraintTop_toBottomOf="@+id/actvPlantName"
         android:autofillHints="" />
 
     <EditText
