--- a/app/src/main/res/layout/event_fragment.xml
+++ b/app/src/main/res/layout/event_fragment.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:inputType="textCapSentences|textCapWords"
         android:hint="@string/eventType"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
