Store Events to Firebase and also watch for changes there and show them in out app.

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -127,6 +127,14 @@
             android:layout_weight="1"
             android:src="@drawable/ic_login"
             android:contentDescription="@string/later" />
+        <ImageButton
+            android:id="@+id/btnForward"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:src="@drawable/ic_forward_arrow"
+            android:contentDescription="@string/save"
+            />
     </LinearLayout>
 
     <ImageView
