--- a/app/src/main/res/layout/event_fragment.xml
+++ b/app/src/main/res/layout/event_fragment.xml
@@ -68,7 +68,7 @@
         app:layout_constraintTop_toBottomOf="@+id/actvUnits" />
 
     <EditText
-        android:id="@+id/edtDesciption"
+        android:id="@+id/edtDescription"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -94,16 +94,24 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtDesciption">
+        app:layout_constraintTop_toBottomOf="@+id/edtDescription">
 
+        <ImageButton
+            android:id="@+id/btnBackToSpecimen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_back_arrow"
+            android:contentDescription="@string/save"
+            />
         <ImageButton
             android:id="@+id/btnSaveEvent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/ic_save"
-            android:contentDescription="@string/save" />
-
+            android:contentDescription="@string/save"
+            />
         <ImageButton
             android:id="@+id/btnTakeEventPhoto"
             android:layout_width="match_parent"
