--- a/app/src/main/res/layout/rowlayout.xml
+++ b/app/src/main/res/layout/rowlayout.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:weightSum="100">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/imgEventThumbnail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="20"
+        android:layout_width="30dp"
+        android:layout_height="80dp"
+        android:layout_weight="1"
         android:contentDescription="@string/event_thumbnail"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -18,5 +17,5 @@
         android:id="@+id/lblEventInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="80" />
+        android:layout_weight="1" />
 </LinearLayout>
