--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -103,6 +103,13 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/etDatePlanted">
+        <ImageButton
+            android:id="@+id/btnMap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/ic_map"
+            android:contentDescription="@string/later" />
 
         <ImageButton
             android:id="@+id/btnTakePhoto"
@@ -127,6 +134,7 @@
             android:layout_weight="1"
             android:src="@drawable/ic_login"
             android:contentDescription="@string/later" />
+
         <ImageButton
             android:id="@+id/btnForward"
             android:layout_width="wrap_content"
